# ComfyUI-Rect

./: README.md  __init__.py  pyproject.toml
assets/: RectExample.json
js/: index.js
py/: __init__.py  rect_crop.py  rect_fill.py  rect_mask.py  rect_select.py
