[project]
name = "rect"                       # Registry package name (no "ComfyUI-" prefix)
version = "0.1.0"                   # Semantic version
description = "Interactive rectangle tools for ComfyUI: Select, Crop, Mask, Fill."
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/jtrue/ComfyUI-Rect"

[tool.comfy]
# IMPORTANT: set this to your Registry publisher id (no leading '@').
PublisherId = "jtrue"
DisplayName = "Rect"
Icon = "https://raw.githubusercontent.com/jtrue/ComfyUI-Rect/main/assets/rect-select.png"
# Banner = "https://raw.githubusercontent.com/jtrue/ComfyUI-Rect/main/assets/banner.png"
# requires-comfyui = ">=1.0.0"
# includes = ["ComfyUI-Rect", "py", "js", "assets"]  # usually not needed
